--- a/appsettings.json
+++ b/appsettings.json
@@ -19,6 +19,13 @@
     "Audience": "4045dbe/ExampleAPI"
   },
 
+  
+    "AWS": {
+      "Profile": "default",
+      "Region": "us-east-1"
+    },
+  
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=TransactionDb;Trusted_Connection=True;"
   }
